Bug 264546 - ugly red continent names
Summary: ugly red continent names
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: plasmoid (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.1.0
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-27 22:47 UTC by Stephan Kleine
Modified: 2011-09-26 20:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Kleine 2011-01-27 22:47:41 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

Since KDE 4.6 the worldclock pasmoid has those fugly red continent names all over the place without an option to get rid of them.

Besides it looks ugly (imho) I actually know those names so please give me an option in the settings to get rid of them to restore the pre 4.6 look.

Besides that I really love that worldclock but those red names currently kill it for me.

Reproducible: Always

Steps to Reproduce:
Install KDE 4.6.
Comment 1 Christos Gourdoupis 2011-04-11 01:05:24 UTC
Yes please remove them. It's insulting. We are not illiterate idiots.
Comment 2 Thibaut Gridel 2011-09-24 13:16:49 UTC
Git commit b77f49f4a7d870ed408a6d186ab560901e247962 by Thibaut Gridel.
Committed on 24/09/2011 at 15:14.
Pushed by tgridel into branch 'master'.

Plasmoid: do not show Terrain data as it irritates some

BUG: 264546

M  +1    -0    src/plasmoid/worldclock.cpp

http://commits.kde.org/marble/b77f49f4a7d870ed408a6d186ab560901e247962
Comment 3 Thibaut Gridel 2011-09-26 20:50:55 UTC
Git commit 841490fe1369fc95b68a6759c876ed8e1d98e31f by Thibaut GRIDEL, on behalf of Thibaut Gridel.
Committed on 24/09/2011 at 15:14.
Pushed by tgridel into branch 'KDE/4.7'.

Plasmoid: do not show Terrain data as it irritates some

BUG: 264546
(cherry picked from commit b77f49f4a7d870ed408a6d186ab560901e247962)

M  +1    -0    src/plasmoid/worldclock.cpp

http://commits.kde.org/marble/841490fe1369fc95b68a6759c876ed8e1d98e31f