Plasmoid: do not show Terrain data as it irritates some

BUG: 264546